cluster/apps/system/kyverno/policies/remove-cpu-limit.yaml
---
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: remove-cpu-limit
  annotations:
    policies.kyverno.io/title: Remove CPU limit
    policies.kyverno.io/subject: Pod
    policies.kyverno.io/description: >-
      This policy removes CPU limits from all Pods.
spec:
  mutateExistingOnPolicyUpdate: true
  generateExistingOnPolicyUpdate: true
  rules:
    - name: remove-cpu-limit
      match:
        any:
          - resources:
              kinds:
                - Pod
      exclude:
        any:
          - resources:
              namespaces:
                - calico-system
                - monero-system
                - tigera-operator
          - resources:
              kinds: ["Pod"]
              selector:
                matchLabels:
                  job-name: "*"
          - resources:
              kinds: ["Pod"]
              selector:
                matchLabels:
                  statefulset.kubernetes.io/pod-name: "*"
          - resources:
              annotations:
                kyverno.io/ignore: "true"
      mutate:
        patchStrategicMerge:
          spec:
            initContainers:
              - (name): "*"
                resources:
                  limits:
                    cpu: null

            containers:
              - (name): "*"
                resources:
                  limits:
                    cpu: null
